fix: center align avatar on mobile view

--- a/home/hero.css
+++ b/home/hero.css
@@ -101,11 +101,13 @@
   }
 
   .row {
+    margin: 0 auto;
     justify-self: center;
   }
 
   .avatar {
     max-width: 200px;
+    margin: 0 auto;
     justify-self: center;
   }
 
